# name: test_complex_dag
  '''
  {
    "__class__": "DependencyStructureSnapshot",
    "solid_invocation_snaps": [
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_group"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_entry_gcs",
        "solid_name": "complex_dag__create_entry_gcs",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_gcs"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_entry_gcs_result",
        "solid_name": "complex_dag__create_entry_gcs_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_gcs"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_entry_gcs_result2",
        "solid_name": "complex_dag__create_entry_gcs_result2",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_entry_group",
        "solid_name": "complex_dag__create_entry_group",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_group"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_entry_group_result",
        "solid_name": "complex_dag__create_entry_group_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_group"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_entry_group_result2",
        "solid_name": "complex_dag__create_entry_group_result2",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template_field"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_tag",
        "solid_name": "complex_dag__create_tag",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_tag_result",
        "solid_name": "complex_dag__create_tag_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_tag_result2",
        "solid_name": "complex_dag__create_tag_result2",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_gcs"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_tag_template",
        "solid_name": "complex_dag__create_tag_template",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_tag_template_field",
        "solid_name": "complex_dag__create_tag_template_field",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template_field"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_tag_template_field_result",
        "solid_name": "complex_dag__create_tag_template_field_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_tag_template_result",
        "solid_name": "complex_dag__create_tag_template_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__create_tag_template_result2",
        "solid_name": "complex_dag__create_tag_template_result2",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_gcs"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__delete_entry_group"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__get_entry"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__lookup_entry"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__search_catalog"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__update_entry"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__delete_entry",
        "solid_name": "complex_dag__delete_entry",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_group"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__delete_tag_template"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__get_entry_group"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__search_catalog"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__delete_entry_group",
        "solid_name": "complex_dag__delete_entry_group",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__list_tags"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__search_catalog"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__update_tag"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__delete_tag",
        "solid_name": "complex_dag__delete_tag",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__delete_tag_template_field"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__get_tag_template"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__search_catalog"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__update_tag_template"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__delete_tag_template",
        "solid_name": "complex_dag__delete_tag_template",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template_field"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__delete_tag"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__rename_tag_template_field"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__search_catalog"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__delete_tag_template_field",
        "solid_name": "complex_dag__delete_tag_template_field",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_gcs"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__get_entry",
        "solid_name": "complex_dag__get_entry",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_group"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__get_entry_group",
        "solid_name": "complex_dag__get_entry_group",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__get_entry_group"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__get_entry_group_result",
        "solid_name": "complex_dag__get_entry_group_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__get_entry"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__get_entry_result",
        "solid_name": "complex_dag__get_entry_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__get_tag_template",
        "solid_name": "complex_dag__get_tag_template",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__get_tag_template"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__get_tag_template_result",
        "solid_name": "complex_dag__get_tag_template_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__list_tags",
        "solid_name": "complex_dag__list_tags",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__list_tags"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__list_tags_result",
        "solid_name": "complex_dag__list_tags_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_gcs"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__lookup_entry",
        "solid_name": "complex_dag__lookup_entry",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__lookup_entry"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__lookup_entry_result",
        "solid_name": "complex_dag__lookup_entry_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template_field"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__update_tag_template_field"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__rename_tag_template_field",
        "solid_name": "complex_dag__rename_tag_template_field",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_gcs"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_group"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template_field"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__search_catalog",
        "solid_name": "complex_dag__search_catalog",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__search_catalog"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__search_catalog_result",
        "solid_name": "complex_dag__search_catalog_result",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_entry_gcs"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__update_entry",
        "solid_name": "complex_dag__update_entry",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__update_tag",
        "solid_name": "complex_dag__update_tag",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__update_tag_template",
        "solid_name": "complex_dag__update_tag_template",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "complex_dag__create_tag_template_field"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "complex_dag__update_tag_template_field",
        "solid_name": "complex_dag__update_tag_template_field",
        "tags": {}
      }
    ]
  }
  '''
# ---
# name: test_diamond_task_dag
  '''
  {
    "__class__": "DependencyStructureSnapshot",
    "solid_invocation_snaps": [
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "diamond_task_dag__dummy_operator_1",
        "solid_name": "diamond_task_dag__dummy_operator_1",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "diamond_task_dag__dummy_operator_1"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "diamond_task_dag__dummy_operator_2",
        "solid_name": "diamond_task_dag__dummy_operator_2",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "diamond_task_dag__dummy_operator_1"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "diamond_task_dag__dummy_operator_3",
        "solid_name": "diamond_task_dag__dummy_operator_3",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "diamond_task_dag__dummy_operator_2"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "diamond_task_dag__dummy_operator_3"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "diamond_task_dag__dummy_operator_4",
        "solid_name": "diamond_task_dag__dummy_operator_4",
        "tags": {}
      }
    ]
  }
  '''
# ---
# name: test_multi_leaf_dag
  '''
  {
    "__class__": "DependencyStructureSnapshot",
    "solid_invocation_snaps": [
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "multi_leaf_dag__dummy_operator_1",
        "solid_name": "multi_leaf_dag__dummy_operator_1",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "multi_leaf_dag__dummy_operator_1"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "multi_leaf_dag__dummy_operator_2",
        "solid_name": "multi_leaf_dag__dummy_operator_2",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "multi_leaf_dag__dummy_operator_1"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "multi_leaf_dag__dummy_operator_3",
        "solid_name": "multi_leaf_dag__dummy_operator_3",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "multi_leaf_dag__dummy_operator_1"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "multi_leaf_dag__dummy_operator_4",
        "solid_name": "multi_leaf_dag__dummy_operator_4",
        "tags": {}
      }
    ]
  }
  '''
# ---
# name: test_multi_root_dag
  '''
  {
    "__class__": "DependencyStructureSnapshot",
    "solid_invocation_snaps": [
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "multi_root_dag__dummy_operator_1",
        "solid_name": "multi_root_dag__dummy_operator_1",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "multi_root_dag__dummy_operator_2",
        "solid_name": "multi_root_dag__dummy_operator_2",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "multi_root_dag__dummy_operator_3",
        "solid_name": "multi_root_dag__dummy_operator_3",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "multi_root_dag__dummy_operator_1"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "multi_root_dag__dummy_operator_2"
              },
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "multi_root_dag__dummy_operator_3"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "multi_root_dag__dummy_operator_4",
        "solid_name": "multi_root_dag__dummy_operator_4",
        "tags": {}
      }
    ]
  }
  '''
# ---
# name: test_one_task_dag
  '''
  {
    "__class__": "DependencyStructureSnapshot",
    "solid_invocation_snaps": [
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "one_task_dag__dummy_operator",
        "solid_name": "one_task_dag__dummy_operator",
        "tags": {}
      }
    ]
  }
  '''
# ---
# name: test_two_task_dag_no_dep
  '''
  {
    "__class__": "DependencyStructureSnapshot",
    "solid_invocation_snaps": [
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "two_task_dag_no_dep__dummy_operator_1",
        "solid_name": "two_task_dag_no_dep__dummy_operator_1",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "two_task_dag_no_dep__dummy_operator_2",
        "solid_name": "two_task_dag_no_dep__dummy_operator_2",
        "tags": {}
      }
    ]
  }
  '''
# ---
# name: test_two_task_dag_with_dep
  '''
  {
    "__class__": "DependencyStructureSnapshot",
    "solid_invocation_snaps": [
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": []
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "two_task_dag_with_dep__dummy_operator_1",
        "solid_name": "two_task_dag_with_dep__dummy_operator_1",
        "tags": {}
      },
      {
        "__class__": "SolidInvocationSnap",
        "input_dep_snaps": [
          {
            "__class__": "InputDependencySnap",
            "input_name": "airflow_task_ready",
            "is_dynamic_collect": false,
            "upstream_output_snaps": [
              {
                "__class__": "OutputHandleSnap",
                "output_name": "airflow_task_complete",
                "solid_name": "two_task_dag_with_dep__dummy_operator_1"
              }
            ]
          }
        ],
        "is_dynamic_mapped": false,
        "solid_def_name": "two_task_dag_with_dep__dummy_operator_2",
        "solid_name": "two_task_dag_with_dep__dummy_operator_2",
        "tags": {}
      }
    ]
  }
  '''
# ---
